Added delelte playlist func, added playnext changed color of finished files

--- a/Video Playlist/Video Playlist.vbproj
+++ b/Video Playlist/Video Playlist.vbproj
@@ -81,6 +81,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="deleteConfim.Designer.vb">
+      <DependentUpon>deleteConfim.vb</DependentUpon>
+    </Compile>
+    <Compile Include="deleteConfim.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +123,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="deleteConfim.resx">
+      <DependentUpon>deleteConfim.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
