--- a/Video Playlist/packages.config
+++ b/Video Playlist/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
+  <package id="Vlc.DotNet.Core" version="2.1.126" targetFramework="net40" />
+  <package id="Vlc.DotNet.Core.Interops" version="2.1.126" targetFramework="net40" />
+  <package id="Vlc.DotNet.Forms" version="2.1.126" targetFramework="net40" />
+  <package id="Vlc.DotNet.Wpf" version="2.1.122" targetFramework="net40" />
 </packages>
